--- a/styles/style.css
+++ b/styles/style.css
@@ -79,8 +79,14 @@ main {
     align-items: center;
     max-width: 820px;
     width: 100%;
-    height: calc(100vh - 5rem);
+    height: calc(100vh - 10rem);
     margin: auto;
+    gap: 2rem;
+}
+
+.canvas-container {
+    display: flex;
+    flex-direction: column;
     gap: 2rem;
 }
 
@@ -90,6 +96,11 @@ canvas {
     border-radius: 16px;
     border: 2px solid var(--bg-neutral);
     background-color: black;
+}
+
+.canvas-ctrl-container {
+    display: flex;
+    justify-content: center;
 }
 
 footer {
@@ -130,7 +141,7 @@ footer {
 .modal-container {
     display: flex;
     flex-direction: column;
-    max-width: 70rem;
+    max-width: 50rem;
     width: 100%;
     max-height: 40rem;
     height: auto;
