--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Inter;
+    src: url('../assets/fonts/inter-variable-font.ttf');
+}
+
 h2 {
     font-size: 1.75rem;
     line-height: unset;
@@ -6,4 +11,9 @@ h2 {
 h3 {
     font-size: 1.5rem;
     line-height: unset;
+}
+
+p {
+    font-weight: 300;
+    color: hsla(210, 1%, 67%, 65%);
 }
