--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Inter;
 }
 
 :root {
@@ -218,7 +218,7 @@ footer {
     height: 2rem;
 }
 
-.tab-content-controls {
+.tab-content {
     border-radius: 1rem;
     border-top-left-radius: unset;
     border: 1px dashed var(--bg-neutral);
@@ -278,6 +278,103 @@ kbd svg {
 
 .bomb-icon {
     fill: var(--bomb-icon);
+}
+
+.article {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    line-height: 1.75;
+}
+
+.article-accent {
+    font-weight: 700;
+    color: var(--base-content);
+}
+
+/* ! CAROUSEL */
+.carousel-container {
+    position: relative;
+    width: 100%;
+    height: 30rem;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.carousel {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    height: 100%;
+}
+
+.carousel-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 100%;
+    padding: 1rem;
+    transition: opacity 0.5s ease-in-out;
+    overflow: visible;
+}
+
+.image-container {
+    width: 100%;
+    flex: 1;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: visible;
+}
+
+.carousel-item img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    filter: drop-shadow(0 0 3rem var(--base-content));
+}
+
+#carousel-brizzly {
+    width: 120px;
+    height: 240px;
+}
+
+
+#carousel-squid {
+    width: 229px;
+    height: 200px;
+}
+
+.carousel-caption {
+    display: flex;
+    justify-content: center;
+    background-color: var(--bg-base-200);
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.75rem;
+    text-align: center;
+}
+
+.carousel-item.active {
+    opacity: 1;
+}
+
+.carousel-item:not(.active) {
+    opacity: 0.5;
+}
+
+.carousel-prev,
+.carousel-next {
+    position: absolute;
+    top: 40%;
+}
+
+.carousel-prev {
+    left: 0;
+}
+
+.carousel-next {
+    right: 0;
 }
 
 /* ! TOOLTIP STYLING */
