--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,7 +1,13 @@
-.intro-buttons {
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
+body {
+    background-image: none;
+}
+
+header {
+    position: sticky;
+    top: 0;
+    background-color: #121314fa;
+    backdrop-filter: blur(1rem);
+    z-index: 100;
 }
 
 .intro-container {
@@ -11,6 +17,84 @@
     align-items: center;
     gap: 2rem;
     position: relative;
+    margin-top: 3rem;
+}
+
+.story-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 1.5rem;
+}
+
+.story-image {
+    width: 100%;
+    max-width: 10rem;
+    height: auto;
+    filter: drop-shadow(0 0 6rem var(--primary));
+}
+
+.story-container figcaption {
+    color: var(--base-content);
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: "Fira Code";
+    line-height: 2rem;
+}
+
+.story-text {
+    height: 3rem;
+    width: 100%;
+}
+
+.story {
+    text-align: center;
+}
+
+.story p {
+    line-height: 1.5rem;
+    margin: 0;
+    display: inline-block;
+    position: relative;
+    font-family: "Fira Code";
+    font-weight: 400;
+    color: var(--base-content);
+    font-size: 1rem;
+}
+
+.cursor {
+    display: inline-block;
+    width: 0.25rem;
+    height: 1.25rem;
+    background-color: var(--primary);
+    margin-left: 0.25rem;
+    vertical-align: middle;
+    position: relative;
+    top: -0.1rem;
+    animation: blink 0.8s step-end infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.intro-buttons {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
 }
 
 .glitch-headline {
@@ -26,7 +110,7 @@
 .invisible-text {
     font-size: 3rem;
     font-weight: 600;
-    color: var(--base-content);
+    color: var(--primary-content);
     position: absolute;
 }
 
@@ -40,10 +124,9 @@
 }
 
 .glitch-animation:nth-child(3) {
-    color: var(--base-content);
+    color: var(--primary-content);
     animation: glitchAnim2 3s infinite;
 }
-
 
 @keyframes glitchAnim1 {
     7% {
@@ -180,5 +263,37 @@
 
     100% {
         transform: none;
+    }
+}
+
+@media screen and (max-width: 30rem) {
+
+    header .header-inner {
+        height: 4rem;
+        padding: 0.5rem;
+    }
+
+    .logo {
+        height: 3rem;
+    }
+
+    .glitch-animation,
+    .invisible-text {
+        font-size: 2.5rem;
+    }
+
+    .story-image {
+        max-width: 8rem;
+        filter: drop-shadow(0 0 6rem var(--primary));
+    }
+
+    .intro-buttons {
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+    }
+
+    .intro-buttons button, a {
+        width: 100%;
     }
 }
