--- a/styles/assets.css
+++ b/styles/assets.css
@@ -13,7 +13,7 @@
     line-height: 1;
     text-align: center;
     text-decoration: none;
-    border: 1px solid transparent;
+    border: unset;
     border-radius: .5rem;
     cursor: pointer;
     transition: transform 100ms cubic-bezier(0, 0, 0.2, 1), background-color 100ms cubic-bezier(0, 0, 0.2, 1);
