--- a/styles/intro.css
+++ b/styles/intro.css
@@ -5,19 +5,20 @@ body {
 header {
     position: sticky;
     top: 0;
-    background-color: #121314fa;
-    backdrop-filter: blur(1rem);
+    left: 0;
+    background-color: var(--bg-base-100);
     z-index: 100;
 }
 
 .intro-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     gap: 2rem;
     position: relative;
     margin-top: 3rem;
+    width: 100%;
 }
 
 .story-container {
@@ -26,12 +27,11 @@ header {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    padding: 1.5rem;
 }
 
 .story-image {
     width: 100%;
-    max-width: 10rem;
+    max-width: 8rem;
     height: auto;
     filter: drop-shadow(0 0 6rem var(--primary));
 }
@@ -120,69 +120,15 @@ header {
 
 .glitch-animation:nth-child(2) {
     color: #a62662;
-    animation: skewAnim 3s infinite;
+    animation: skewAnimation 3s infinite;
 }
 
 .glitch-animation:nth-child(3) {
     color: var(--primary-content);
-    animation: glitchAnim2 3s infinite;
+    animation: glitchAnimation 3s infinite;
 }
 
-@keyframes glitchAnim1 {
-    7% {
-        transform: none;
-    }
-
-    10% {
-        transform: translate(0.375rem, -0.125rem);
-    }
-
-    13% {
-        transform: none;
-    }
-
-    20% {
-        transform: none;
-    }
-
-    23% {
-        transform: translate(-0.75rem, -0.4375rem);
-    }
-
-    26% {
-        transform: none;
-    }
-
-    40% {
-        transform: none;
-    }
-
-    43% {
-        transform: translate(0.625rem, -0.5625rem);
-    }
-
-    46% {
-        transform: none;
-    }
-
-    65% {
-        transform: none;
-    }
-
-    68% {
-        transform: translate(0.4375rem, 0.3125rem);
-    }
-
-    71% {
-        transform: none;
-    }
-
-    100% {
-        transform: none;
-    }
-}
-
-@keyframes glitchAnim2 {
+@keyframes glitchAnimation {
     7% {
         transform: none;
     }
@@ -236,7 +182,7 @@ header {
     }
 }
 
-@keyframes skewAnim {
+@keyframes skewAnimation {
     20% {
         transform: none;
     }
@@ -268,13 +214,13 @@ header {
 
 @media screen and (max-width: 30rem) {
 
-    header .header-inner {
-        height: 4rem;
-        padding: 0.5rem;
+    main {
+        min-height: calc(100vh - 4rem);
     }
 
-    .logo {
-        height: 3rem;
+    .intro-container {
+        flex: 1;
+        gap: 1rem;
     }
 
     .glitch-animation,
@@ -282,9 +228,13 @@ header {
         font-size: 2.5rem;
     }
 
+    .story-container {
+        gap: 1.5rem;
+    }
+
     .story-image {
-        max-width: 8rem;
-        filter: drop-shadow(0 0 6rem var(--primary));
+        max-width: 6rem;
+        filter: drop-shadow(0 0 4rem var(--primary));
     }
 
     .intro-buttons {
@@ -293,7 +243,8 @@ header {
         width: 100%;
     }
 
-    .intro-buttons button, a {
+    .intro-buttons button,
+    .intro-buttons a {
         width: 100%;
     }
 }
