--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 
 :root {
     --bg-base-100: #121314;
-    --bg-base-200: #0a0b0c;
+    --bg-base-200: #0c0d0e;
     --bg-neutral: #444444;
     --primary: #ff79c6;
     --secondary: #bd93f9;
@@ -25,50 +25,13 @@
 body {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
     background-color: var(--bg-base-100);
     background-image: url("../assets/img/main/bg-img.svg");
-    background-size: 8rem  8rem;
+    background-size: 8rem 8rem;
     background-position: center;
     backdrop-filter: blur(0.125rem);
     color: var(--base-content);
-}
-
-header {
-    position: sticky;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    background-color: #121314aa;
-    backdrop-filter: blur(0.25rem);
-}
-
-.header-inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    max-width: 96rem;
-    margin: 0 auto;
-    padding: 1rem;
-}
-
-.main-logo {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.logo {
-    height: 4rem;
-    width: auto;
-}
-
-.setting-bar {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
 }
 
 main {
@@ -78,7 +41,7 @@ main {
     align-items: center;
     max-width: 820px;
     width: 100%;
-    min-height: calc(100vh - 6rem);
+    min-height: calc(100vh - 5rem);
     padding: 1rem;
     margin: auto;
     gap: 2rem;
@@ -101,322 +64,6 @@ canvas {
 .canvas-ctrl-container {
     display: flex;
     justify-content: center;
-}
-
-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    background-color: var(--bg-base-200);
-    height: 16rem;
-}
-
-.footer-inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    max-width: 96rem;
-    margin: 0 auto;
-    padding: 1rem;
-}
-
-/* ! MODAL SYTLING */
-.modal {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 100;
-    background-color: #000000aa;
-    backdrop-filter: blur(4px);
-    padding: 1rem;
-}
-
-.modal-container {
-    display: flex;
-    flex-direction: column;
-    max-width: 50rem;
-    width: 100%;
-    max-height: 40rem;
-    height: auto;
-    margin: auto;
-    padding: 2rem;
-    border-radius: 1.5rem;
-    border: 1px solid var(--bg-neutral);
-    background-color: var(--bg-base-100);
-    gap: 3rem;
-    overflow-y: auto;
-}
-
-.modal-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: auto;
-}
-
-.modal-headline {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
-.modal-headline svg {
-    fill: var(--base-content);
-    height: 2rem;
-    width: 2rem;
-}
-
-.modal-content {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-}
-
-.modal-guide-item {
-    display: flex;
-    flex-direction: column;
-}
-
-.modal-settings-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    border-radius: .5rem;
-}
-
-.modal-settings-item:hover {
-    background-color: color-mix(in srgb, var(--bg-neutral) 70%, transparent 70%);
-    cursor: pointer;
-
-    input {
-        border-color: var(--success);
-    }
-}
-
-.modal-guide-item,
-.modal-settings-item {
-    gap: 1.5rem;
-}
-
-.modal-guide-item-category {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.modal-guide-item-category svg {
-    fill: var(--base-content);
-    width: 2rem;
-    height: 2rem;
-}
-
-.tab-content {
-    border-radius: 1rem;
-    border-top-left-radius: unset;
-    border: 1px dashed var(--bg-neutral);
-    padding: 1.5rem;
-}
-
-.tab-content-settings {
-    border-radius: 1rem;
-    border: 1px dashed var(--bg-neutral);
-    padding: 1.5rem;
-}
-
-.modal-content-explanation {
-    display: flex;
-    gap: 0.5rem;
-}
-
-.asteriks {
-    color: var(--primary);
-}
-
-.kbd-control {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.kbd-control-row {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-}
-
-kbd {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: .5rem;
-    border: 1px solid var(--bg-neutral);
-    background-color: var(--bg-base-200);
-    font-size: 1.25rem;
-    font-weight: 500;
-    height: 2.5rem;
-    width: 2.5rem;
-    padding: 1rem .5rem;
-}
-
-kbd svg {
-    fill: var(--base-content);
-    height: 1.5rem;
-    width: 1.5rem;
-}
-
-.health-icon {
-    fill: var(--error);
-}
-
-.bomb-icon {
-    fill: var(--base-content);
-}
-
-.article {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    line-height: 1.75;
-}
-
-.article-accent {
-    font-weight: 700;
-    color: var(--base-content);
-}
-
-/* ! CAROUSEL */
-.carousel-container {
-    position: relative;
-    width: 100%;
-    height: 30rem;
-    margin: 0 auto;
-    overflow: hidden;
-}
-
-.carousel {
-    display: flex;
-    transition: transform 300ms ease-in-out;
-    height: 100%;
-}
-
-.carousel-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    min-width: 100%;
-    padding: 1rem;
-    transition: opacity 300ms ease-in-out;
-    overflow: visible;
-}
-
-.image-container {
-    width: 100%;
-    flex: 1;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: visible;
-}
-
-.carousel-item img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    filter: drop-shadow(0 0 3rem var(--base-content));
-}
-
-#carousel-brizzly {
-    width: 120px;
-    height: 240px;
-}
-
-#carousel-squid {
-    width: 229px;
-    height: 200px;
-}
-
-.carousel-caption {
-    display: flex;
-    justify-content: center;
-    background-color: var(--bg-base-200);
-    padding: 0.75rem 1.5rem;
-    border-radius: 0.75rem;
-    text-align: center;
-}
-
-.carousel-item.active {
-    opacity: 1;
-}
-
-.carousel-item:not(.active) {
-    opacity: 0.5;
-}
-
-.carousel-prev,
-.carousel-next {
-    position: absolute;
-    top: 40%;
-}
-
-.carousel-prev {
-    left: 0;
-}
-
-.carousel-next {
-    right: 0;
-}
-
-/* ! TOOLTIP STYLING */
-.tooltip {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-}
-
-.tooltip-text {
-    visibility: hidden;
-    width: max-content;
-    background-color: var(--bg-neutral);
-    color: var(--primary-content);
-    text-align: center;
-    padding: 0.75rem;
-    border-radius: 0.5rem;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    white-space: nowrap;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    z-index: 10;
-    margin-top: 1rem;
-    font-size: 0.75rem;
-}
-
-.tooltip-text::after {
-    content: '';
-    position: absolute;
-    top: -0.75rem;
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 6px;
-    border-style: solid;
-    border-color: transparent transparent var(--bg-neutral) transparent;
-}
-
-.tooltip:hover .tooltip-text {
-    visibility: visible;
-    opacity: 1;
 }
 
 /* ! PROGRESS-BAR */
@@ -495,17 +142,3 @@ kbd svg {
     fill: hsla(45, 29%, 97%, 0.7);
 }
 
-
-
-
-
-
-
-
-
-@media (pointer: coarse) {
-    .tooltip:hover .tooltip-text {
-            visibility: hidden;
-            opacity: 0;
-        }
-}
