--- a/styles/modals.css
+++ b/styles/modals.css
@@ -252,6 +252,7 @@ kbd svg {
 
 .game-over-screen {
     position: absolute;
+    z-index: 1000;
 }
 
 .game-over-screen-content {
@@ -265,7 +266,6 @@ kbd svg {
     background-color: #000000aa;
     backdrop-filter: blur(4px);
     padding: 1rem;
-    z-index: 1000;
     border-radius: 1rem;
 }
 
@@ -274,7 +274,7 @@ kbd svg {
 }
 
 .game-over-screen-content span {
-    font-family: "Fira Code";
+    font-family: "Fira Code", monospace;
     font-weight: 400;
     line-height: 1.5rem;
     text-wrap: pretty;
@@ -284,4 +284,23 @@ kbd svg {
     display: flex;
     justify-content: center;
     gap: 1rem;
+}
+
+@media (pointer: coarse) and (orientation: landscape) {
+    .game-over-screen {
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .game-over-screen-content {
+        width: 100%;
+        height: 100%;
+        border-radius: unset;
+    }
+}
+
+@media (pointer: coarse) and (orientation: landscape) and (max-height: 32rem) {
+    .modal-container {
+        max-height: 100%;
+    }
 }
