--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,8 @@ canvas {
     border-radius: 1rem;
     border: 2px solid var(--bg-neutral);
     background-color: black;
+    width: 100%;
+    height: 100%;
 }
 
 .canvas-ctrl-container {
