--- a/styles/base.css
+++ b/styles/base.css
@@ -10,6 +10,15 @@ hr {
     border: 0.5px solid var(--bg-neutral);
 }
 
+a {
+    text-decoration: none;
+    color: var(--base-content);
+}
+
+a:hover {
+    color: var(--primary-content);
+}
+
 ::-webkit-scrollbar {
     width: 1rem;
 }
