--- a/styles/footer.css
+++ b/styles/footer.css
@@ -38,18 +38,30 @@ footer {
     width: auto;
 }
 
+.imprint {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.imprint span {
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: color-mix(in srgb, var(--base-content) 70%, transparent 70%);
+}
+
 .made-with-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem;
-    font-size: 0.875rem;
+    gap: 0.25rem;
+    font-size: 0.75rem;
     font-weight: 300;
 }
 
 .made-with-section>svg {
     fill: var(--primary);
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 1.0rem;
+    width: 1.0rem;
 }
