--- a/styles/modals.css
+++ b/styles/modals.css
@@ -6,6 +6,7 @@
     top: 0;
     left: 0;
     height: 100%;
+    max-height: 100vh;
     width: 100%;
     z-index: 100;
     background-color: #000000aa;
@@ -139,10 +140,11 @@ kbd {
     height: 2.5rem;
     width: 2.5rem;
     padding: 1rem .5rem;
+    color: var(--primary-content);
 }
 
 kbd svg {
-    fill: var(--base-content);
+    fill: var(--primary-content);
     height: 1.5rem;
     width: 1.5rem;
 }
@@ -152,7 +154,7 @@ kbd svg {
 }
 
 .bomb-icon {
-    fill: var(--base-content);
+    fill: var(--primary-content);
 }
 
 .article {
@@ -204,19 +206,19 @@ kbd svg {
 
 .carousel-item img {
     width: 100%;
-    max-width: 300px;
+    max-width: 16rem;
     height: auto;
-    filter: drop-shadow(0 0 3rem var(--base-content));
+    filter: drop-shadow(0 0 3rem var(--primary));
 }
 
 #carousel-brizzly {
-    width: 120px;
-    height: 240px;
+    width: 7rem;
+    height: auto;
 }
 
 #carousel-squid {
-    width: 229px;
-    height: 200px;
+    width: 12rem;
+    height: auto;
 }
 
 .carousel-caption {
@@ -252,6 +254,8 @@ kbd svg {
 
 .game-over-screen {
     position: absolute;
+    height: calc(100% - 6rem);
+    width: 100%;
     z-index: 1000;
 }
 
@@ -259,14 +263,14 @@ kbd svg {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 45rem;
-    min-height: 30rem;
+    width: 100%;
+    height: 100%;
     gap: 2rem;
     text-align: center;
     background-color: #000000aa;
     backdrop-filter: blur(4px);
     padding: 1rem;
-    border-radius: 1rem;
+    border-radius: calc(1rem - 2px);
 }
 
 .game-over-screen-content h1 {
@@ -287,6 +291,12 @@ kbd svg {
 }
 
 @media (pointer: coarse) and (orientation: landscape) {
+
+    .modal-container {
+        gap: 1.5rem;
+    }
+    
+
     .game-over-screen {
         width: 100vw;
         height: 100vh;
@@ -302,5 +312,10 @@ kbd svg {
 @media (pointer: coarse) and (orientation: landscape) and (max-height: 32rem) {
     .modal-container {
         max-height: 100%;
+        max-width: 100%;
+    }
+
+    .kbd-control-row {
+        gap: 1.5rem;
     }
 }
