--- a/styles/footer.css
+++ b/styles/footer.css
@@ -38,16 +38,34 @@ footer {
     width: auto;
 }
 
-.imprint {
+.footer-links {
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 1rem;
+    width: 100%;
+    height: 2rem;
+    gap: 0.5rem;
+    font-size: 0.875rem;
 }
 
-.imprint span {
-    font-size: 1.5rem;
-    font-weight: 300;
-    color: color-mix(in srgb, var(--base-content) 70%, transparent 70%);
+.footer-links svg {
+    height: 1.5rem;
+    width: 1.5rem;
+    fill: color-mix(in srgb, var(--base-content) 70%, transparent 70%);
+}
+
+.footer-links a {
+    color: var(--base-content);
+    border: 1px solid transparent;
+    border-radius: 1rem;
+    background-color: unset;
+    padding: .375rem 0.75rem;
+}
+
+.footer-links a:hover {
+    color: var(--primary-content);
+    border: 1px solid var(--primary);
+    background-color: color-mix(in srgb, var(--primary) 10%, transparent 100%);
 }
 
 .made-with-section {
