--- a/styles/article.css
+++ b/styles/article.css
@@ -1,23 +1,60 @@
-.article {
+.article-wrapper {
     display: flex;
     flex-direction: column;
-    max-width: 90rem;
-    width: 100%;
+    justify-content: center;
     min-height: calc(100vh - 5rem);
     padding: 1rem;
     margin: auto;
-    margin-top: 6rem;
-    gap: 2rem;
+    margin-top: 12rem;
+    padding-bottom: 8rem;
+}
+
+article {
+    display: flex;
+    flex-direction: column;
+    max-width: 50rem;
+    gap: 6rem;
+    line-height: 1.75rem;
+    color: var(--base-content);
 }
 
 .article-header {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 4rem;
+}
+
+.external-link {
+    display: flex;
+    align-items: center;
+    border: 1px solid color-mix(in srgb, var(--bg-neutral) 70%, transparent 70%);
+    border-radius: 1.5rem;
+    background-color: unset;
+    padding: .375rem 0.75rem;
+    gap: 0.5rem;
+    color: var(--base-content);
+    user-select: none;
+}
+
+.external-link svg {
+    fill: var(--base-content);
+    height: 1.75rem;
+    width: 1.75rem;
 }
 
 .article-headline {
     font-size: 3rem;
+}
+
+.external-link:hover {
+    border: 1px solid var(--primary);
+    background-color: color-mix(in srgb, var(--primary) 10%, transparent 100%);
+    color: var(--primary-content);
+
+    svg {
+        fill: var(--primary-content);
+        ;
+    }
 }
 
 .article-header a {
@@ -25,11 +62,12 @@
     align-items: center;
     width: max-content;
     border: 1px solid color-mix(in srgb, var(--bg-neutral) 70%, transparent 70%);
-    border-radius: 1rem;
+    border-radius: 1.5rem;
     background-color: unset;
     padding: .375rem 0.75rem;
     gap: 0.5rem;
     color: var(--base-content);
+    user-select: none;
 }
 
 .article-header a svg {
@@ -44,6 +82,19 @@
     color: var(--primary-content);
 
     svg {
-        fill: var(--primary-content);;
+        fill: var(--primary-content);
+        ;
     }
+}
+
+.article-main {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
