--- a/styles/assets.css
+++ b/styles/assets.css
@@ -17,6 +17,7 @@
     border-radius: .5rem;
     cursor: pointer;
     transition: transform 100ms cubic-bezier(0, 0, 0.2, 1), background-color 100ms cubic-bezier(0, 0, 0.2, 1);
+    user-select: none;
 }
 
 .btn svg {
