--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,6 +3,7 @@ footer {
     justify-content: center;
     align-items: center;
     background-color: var(--bg-base-200);
+    user-select: none;
 }
 
 .footer-inner {
@@ -44,20 +45,23 @@ footer {
     align-items: center;
     width: 100%;
     height: 2rem;
-    gap: 0.5rem;
+    gap: 1rem;
     font-size: 0.875rem;
 }
 
 .footer-links svg {
-    height: 1.5rem;
-    width: 1.5rem;
-    fill: color-mix(in srgb, var(--base-content) 70%, transparent 70%);
+    height: 1rem;
+    width: 1rem;
+    fill: var(--base-content);
 }
 
 .footer-links a {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
     color: var(--base-content);
-    border: 1px solid transparent;
-    border-radius: 1rem;
+    border: 1px solid color-mix(in srgb, var(--bg-neutral) 70%, transparent 70%);
+    border-radius: 1.5rem;
     background-color: unset;
     padding: .375rem 0.75rem;
 }
@@ -66,6 +70,10 @@ footer {
     color: var(--primary-content);
     border: 1px solid var(--primary);
     background-color: color-mix(in srgb, var(--primary) 10%, transparent 100%);
+
+    svg {
+        fill: var(--primary-content);
+    }
 }
 
 .made-with-section {
