--- a/styles/intro.css
+++ b/styles/intro.css
@@ -10,7 +10,8 @@ header {
     position: sticky;
     top: 0;
     left: 0;
-    background-color: var(--bg-base-100);
+    background-color: #121314fa;
+    backdrop-filter: blur(0.5rem);
     z-index: 100;
 }
 
@@ -21,7 +22,7 @@ header {
     align-items: center;
     gap: 2rem;
     position: relative;
-    margin-top: 3rem;
+    margin: 3rem 0;
     width: 100%;
 }
 
@@ -60,7 +61,7 @@ header {
 
 .story-image {
     width: 100%;
-    max-width: 8rem;
+    max-width: 10rem;
     height: auto;
     filter: drop-shadow(0 0 6rem var(--primary));
 }
