--- a/styles/footer.css
+++ b/styles/footer.css
@@ -15,7 +15,7 @@ footer {
     width: 100%;
     margin: 0 auto;
     padding: 2rem 1rem;
-    gap: 1.5rem;
+    gap: 2rem;
 }
 
 .footer-main {
@@ -44,7 +44,6 @@ footer {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 2rem;
     gap: 1rem;
     font-size: 0.875rem;
 }
@@ -90,4 +89,11 @@ footer {
     fill: var(--primary);
     height: 1.0rem;
     width: 1.0rem;
+}
+
+
+@media screen and (max-width: 480px) {
+    .footer-links {
+        flex-direction: column;
+    }
 }
