--- a/styles/header.css
+++ b/styles/header.css
@@ -82,12 +82,13 @@ header {
     opacity: 1;
 }
 
-@media (pointer: coarse) and (max-width: 768px) {
-
+@media screen and (max-width: 48rem) {
     .main-logo span {
         display: none;
     }
+}
 
+@media (pointer: coarse) and (max-width: 48rem) {
     .tooltip:hover .tooltip-text {
         visibility: hidden;
         opacity: 0;
@@ -107,7 +108,7 @@ header {
         padding: 0.75rem;
     }
 
-    .logo {
+    .logo-img {
         height: 2.5rem;
         width: auto;
     }
