--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,9 +1,22 @@
 body {
-    background-image: none;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: var(--bg-base-100);
+    color: var(--base-content);
 }
 
 main {
-    min-height: calc(100vh - 4rem);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 820px;
+    width: 100%;
+    min-height: calc(100vh - 5rem);
+    padding: 1rem;
+    margin: auto;
+    gap: 2rem;
 }
 
 header {
