--- a/styles/base.css
+++ b/styles/base.css
@@ -1,25 +1,7 @@
-.hidden {
-    display: none !important;
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--thumb-color) var(--track-color);
 }
-
-.no-scroll {
-    overflow: hidden;
-}
-
-hr {
-    border: 0.5px solid var(--bg-neutral);
-}
-
-a {
-    text-decoration: none;
-    color: var(--base-content);
-}
-
-::selection {
-    background-color: color-mix(in srgb, var(--primary) 10%, transparent 100%);
-}
-
-
 
 ::-webkit-scrollbar {
     width: 1rem;
@@ -41,22 +23,18 @@ a {
     background: var(--thumb-hover-color);
 }
 
-.modal-container::-webkit-scrollbar {
-    width: 1rem;
+::selection {
+    background-color: color-mix(in srgb, var(--primary) 10%, transparent 100%);
 }
 
-.modal-container::-webkit-scrollbar-track {
-    background: var(--track-color);
-    margin: .875rem .25rem;
-    border-radius: 1.5rem;
+.hidden {
+    display: none !important;
 }
 
-.modal-container::-webkit-scrollbar-thumb {
-    background-color: var(--thumb-color);
-    border-radius: 1rem;
-    border: 4px solid var(--track-color);
+.no-scroll {
+    overflow: hidden;
 }
 
-.modal-container::-webkit-scrollbar-thumb:hover {
-    background: var(--thumb-hover-color);
+hr {
+    border: 0.5px solid var(--bg-neutral);
 }
