--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -8,9 +8,10 @@
     src: url('../assets/fonts/firacode-variable.ttf');
 }
 
+
 h2 {
     font-size: 1.75rem;
-    line-height: unset;
+    line-height: normal;
 }
 
 h3 {
@@ -21,4 +22,19 @@ h3 {
 p {
     font-weight: 300;
     color: hsla(210, 1%, 67%, 65%);
+}
+
+a {
+    text-decoration: none;
+    color: var(--base-content);
+}
+
+@media screen and (max-width: 30rem) {
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    h3 {
+        font-size: 1.25rem;
+    }
 }
