--- a/styles/footer.css
+++ b/styles/footer.css
@@ -91,8 +91,8 @@ footer {
     width: 1.0rem;
 }
 
+@media screen and (max-width: 30rem) {
 
-@media screen and (max-width: 480px) {
     .footer-links {
         flex-direction: column;
     }
