updated style and logics
update includes:
- fullscreen logic for cleaner and more modular code,
- prevention for button clicks when game-over screen is active,
- improved sound toggle logic, syncing button and checkbox states

--- a/styles/assets.css
+++ b/styles/assets.css
@@ -39,6 +39,22 @@
     }
 }
 
+.btn.disabled {
+    cursor: not-allowed;
+}
+
+.btn.disabled:hover {
+    cursor: not-allowed;
+
+    svg {
+        fill: var(--base-content);
+    }
+
+    .tooltip-text {
+        display: none;
+    }
+}
+
 .btn-primary {
     background-color: var(--primary);
     color: var(--bg-base-200);
