--- a/styles/game.css
+++ b/styles/game.css
@@ -15,7 +15,6 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 820px;
     width: 100%;
     min-height: calc(100vh - 5rem);
     padding: 1rem;
@@ -29,7 +28,12 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    /* margin: 0 auto; */
+}
+
+.canvas-container.fullscreen {
+    .game-over-screen-content {
+        height: 100vh;
+    }
 }
 
 canvas {
@@ -39,6 +43,7 @@ canvas {
     background-color: black;
     width: 100%;
     height: 100%;
+    aspect-ratio: 16/9;
 }
 
 .canvas-ctrl-container {
@@ -170,10 +175,4 @@ canvas {
         display: flex !important;
         justify-content: space-between;
     }
-}
-
-
-.fullscreen {
-    width: 100%;
-    height: 100%;
 }
