--- a/styles/modals.css
+++ b/styles/modals.css
@@ -342,22 +342,20 @@ kbd svg {
     border-radius: 1rem;
     border: 1px dashed var(--bg-neutral);
     padding: 1.5rem;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .popup-menu-item {
     display: flex;
+    justify-content: flex-start;
     align-items: center;
+    padding: 0.75rem 1rem;
+    background-color: color-mix(in srgb, var(--bg-neutral) 70%, transparent 70%);
+    cursor: pointer;
+    border-radius: 0.5rem;
     gap: 1rem;
 }
 
-.popup-setting-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.popup-setting-item svg,
 .popup-menu-item svg {
     height: 1.5rem;
     width: 1.5rem;
@@ -368,6 +366,8 @@ label {
     display: flex;
     align-items: center;
     gap: 1rem;
+    cursor: pointer;
+    width: 100%;
 }
 
 @media (pointer: coarse) and (orientation: landscape) {
@@ -384,6 +384,10 @@ label {
         width: 100%;
         height: 100%;
         border-radius: unset;
+    }
+
+    #fullscreen-checkbox {
+        display: none;
     }
 }
 
