--- a/styles/article.css
+++ b/styles/article.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     justify-content: center;
     min-height: calc(100vh - 5rem);
-    padding: 2rem;
     margin: auto;
     margin-top: 12rem;
+    padding: 2rem;
     padding-bottom: 8rem;
 }
 
@@ -27,10 +27,10 @@ article {
 .external-link {
     display: flex;
     align-items: center;
+    padding: .375rem 0.75rem;
     border: 1px solid color-mix(in srgb, var(--bg-neutral) 70%, transparent 70%);
     border-radius: 1.5rem;
     background-color: unset;
-    padding: .375rem 0.75rem;
     gap: 0.5rem;
     color: var(--base-content);
     user-select: none;
@@ -52,41 +52,39 @@ article {
     border: 1px solid var(--primary);
     background-color: color-mix(in srgb, var(--primary) 10%, transparent 100%);
     color: var(--primary-content);
+}
 
-    svg {
-        fill: var(--primary-content);
-        ;
-    }
+.external-link:hover svg {
+    fill: var(--primary-content);
 }
 
 .article-header a {
     display: flex;
     align-items: center;
     width: max-content;
+    padding: .375rem 0.75rem;
     border: 1px solid color-mix(in srgb, var(--bg-neutral) 70%, transparent 70%);
     border-radius: 1.5rem;
     background-color: unset;
-    padding: .375rem 0.75rem;
     gap: 0.5rem;
     color: var(--base-content);
     user-select: none;
 }
 
 .article-header a svg {
-    fill: var(--base-content);
     height: 1.25rem;
     width: 1.25rem;
+    fill: var(--base-content);
 }
 
 .article-header a:hover {
     border: 1px solid var(--primary);
     background-color: color-mix(in srgb, var(--primary) 10%, transparent 100%);
     color: var(--primary-content);
+}
 
-    svg {
-        fill: var(--primary-content);
-        ;
-    }
+.article-header a:hover svg {
+    fill: var(--primary-content);
 }
 
 .article-main {
