--- a/styles/game.css
+++ b/styles/game.css
@@ -17,8 +17,8 @@ main {
     align-items: center;
     width: 100%;
     min-height: calc(100vh - 5rem);
-    padding: 1rem;
     margin: auto;
+    padding: 1rem;
     gap: 2rem;
 }
 
@@ -34,16 +34,20 @@ main {
     .game-over-screen-content {
         height: 100vh;
     }
+    canvas {
+        border-radius: unset;
+        border: unset;
+    }
 }
 
 canvas {
     position: relative;
-    border-radius: 1rem;
-    border: 2px solid var(--bg-neutral);
-    background-color: black;
     width: 100%;
     height: 100%;
     aspect-ratio: 16/9;
+    border: 2px solid var(--bg-neutral);
+    border-radius: 1rem;
+    background-color: var(--bg-base-200);
 }
 
 .canvas-ctrl-container {
@@ -82,9 +86,9 @@ canvas {
     left: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
     width: calc(100% - 70%);
     z-index: 1;
+    gap: 0.5rem;
 }
 
 .progress-bar-item {
@@ -97,25 +101,25 @@ canvas {
 #progress-container-bomb {
     width: 100%;
     height: 0.5rem;
-    background-color: #0a0b0c50;
-    border-radius: 0.5rem;
-    overflow: hidden;
     z-index: 1;
+    border-radius: 0.5rem;
+    background-color: #0a0b0c50;
+    overflow: hidden;
 }
 
 #progress-bar-health {
     height: 100%;
     width: 100%;
-    background-color: hsla(340, 82%, 52%, 0.7);
     border-radius: 0.5rem;
+    background-color: hsla(340, 82%, 52%, 0.7);
     transition: width 0.2s ease;
 }
 
 #progress-bar-bomb {
     height: 100%;
     width: 100%;
-    background-color: hsla(45, 29%, 97%, 0.7);
     border-radius: 0.5rem;
+    background-color: hsla(45, 29%, 97%, 0.7);
     transition: width 0.2s ease;
 }
 
@@ -126,8 +130,8 @@ canvas {
     align-items: center;
     height: 2rem;
     width: 2rem;
-    border-radius: 2rem;
     padding: 0.375rem;
+    border-radius: 2rem;
     background-color: #0a0b0caa;
 }
 
