updated logics and styles
update includes:
- loader animation,
- modal fade-in animation,
- preload of images in init logic,
- css optimizations

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -39,6 +39,12 @@ footer {
     width: auto;
 }
 
+.footer-logo-txt {
+    font-size: 1.5rem;
+    font-weight: 500;
+    letter-spacing: -0.75px;
+}
+
 .footer-links {
     display: flex;
     justify-content: center;
