--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,7 @@ header {
     height: 5rem;
     background-color: var(--bg-base-200);
     backdrop-filter: blur(0.25rem);
+    z-index: 10;
     user-select: none;
 }
 
@@ -69,7 +70,7 @@ header {
     white-space: nowrap;
     opacity: 0;
     transition: opacity 0.3s ease;
-    z-index: 10;
+    z-index: 1;
     margin-top: 1rem;
     font-size: 0.75rem;
 }
@@ -138,7 +139,7 @@ header {
     }
 }
 
-@media (pointer: coarse) and (orientation: landscape) {
+/* @media (pointer: coarse) and (orientation: landscape) {
     header {
         z-index: 10;
         background-color: unset;
@@ -154,6 +155,12 @@ header {
     }
 
     #main-logo {
+        display: none;
+    }
+} */
+
+@media screen and (max-width: 48rem) {
+    .external-link {
         display: none;
     }
 }
