--- a/styles/modals.css
+++ b/styles/modals.css
@@ -10,11 +10,12 @@
     padding: 1rem;
     background-color: var(--backdrop-md);
     backdrop-filter: blur(0.25rem);
-    z-index: 100;
+    z-index: 1000;
+    user-select: none;
 }
 
 #popup-menu {
-    z-index: 99;
+    z-index: 1000;
 }
 
 .modal-container {
@@ -22,7 +23,7 @@
     flex-direction: column;
     max-width: 50rem;
     width: 100%;
-    max-height: 40rem;
+    max-height: 46rem;
     height: 100%;
     margin: auto;
     padding: 2rem;
@@ -54,7 +55,8 @@
     fill: var(--base-content);
 }
 
-.modal-content {
+.modal-content,
+.settings-form {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -147,8 +149,21 @@
     display: none;
 }
 
+.settings-modal-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    gap: 2rem;
+}
+
+.settings-modal-footer button {
+    place-self: center;
+}
+
 .modal-content-explanation {
     display: flex;
+    justify-content: center;
     gap: 0.5rem;
 }
 
@@ -286,6 +301,8 @@ kbd svg {
     width: 100%;
     height: calc(100% - 6rem);
     z-index: 1000;
+    border-radius: 1rem;
+    border: 1px solid var(--bg-neutral);
 }
 
 .game-over-screen-content {
@@ -298,7 +315,7 @@ kbd svg {
     gap: 2rem;
     background-color: #000000aa;
     backdrop-filter: blur(4px);
-    border-radius: calc(1rem - 2px);
+    border-radius: calc(1rem - 1px);
     text-align: center;
 }
 
@@ -353,14 +370,41 @@ label {
     cursor: pointer;
 }
 
+.modal-in {
+    -webkit-animation: modal-in 200ms cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in 200ms cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+@-webkit-keyframes modal-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes modal-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 @media (pointer: coarse) and (orientation: landscape) {
     .modal-container {
         gap: 1.5rem;
     }
 
     .game-over-screen {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
+        border-radius: unset;
+        border: unset;
     }
 
     .game-over-screen-content {
