refactor template loading logic
update includes:
- load and render innerHTML templates dynamically for various components;

- optimized media queries for portrait and touch devices.

--- a/styles/landscape.css
+++ b/styles/landscape.css
@@ -45,11 +45,9 @@
     }
 }
 
-@media (max-width: 40rem) {
-    @media (pointer: coarse) and (orientation: portrait),
-    screen {
-        .landscape-modal {
-            display: flex !important;
-        }
+@media (max-width: 48rem) and (orientation: portrait),
+(pointer: coarse) and (orientation: portrait) {
+    .landscape-modal {
+        display: flex !important;
     }
 }
