--- a/styles/article.css
+++ b/styles/article.css
@@ -1,26 +1,56 @@
-.article-wrapper {
+.legal-notice-wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    min-height: calc(100vh - 5rem);
+    width: 100%;
+    min-height: 100vh;
+    overflow: hidden;
+}
+
+.legal-notice-wrapper-inner {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 64rem;
     margin: auto;
-    margin-top: 12rem;
     padding: 2rem;
     padding-bottom: 8rem;
+    gap: 6rem;
+}
+
+.hero-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 100%;
+    height: 18rem;
+}
+
+.blur {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(50%, -50%);
+    height: clamp(16rem, 10.909vw + 11.909rem, 25rem);
+    width: clamp(16rem, 10.909vw + 11.909rem, 25rem);
+    border-radius: 10rem;
+    background-color: var(--primary);
+    filter: blur(clamp(8rem, 8.485vw + 4.818rem, 15rem));
 }
 
 article {
     display: flex;
     flex-direction: column;
-    max-width: 60rem;
-    gap: 6rem;
+    gap: 4rem;
     line-height: 1.75rem;
     color: var(--base-content);
 }
 
 .article-header {
+    position: relative;
     display: flex;
     flex-direction: column;
+    width: fit-content;
     gap: 3rem;
 }
 
@@ -28,41 +58,6 @@ article {
     font-size: 3rem;
     letter-spacing: -1px;
     line-height: normal;
-}
-
-.article-header a {
-    display: flex;
-    align-items: center;
-    width: max-content;
-    padding: .375rem 0.75rem;
-    border: 1px solid color-mix(in srgb, var(--bg-neutral) 70%, transparent 70%);
-    border-radius: 1.5rem;
-    background-color: unset;
-    gap: 0.5rem;
-    color: var(--base-content);
-    user-select: none;
-}
-
-.article-header a svg {
-    height: 1.25rem;
-    width: 1.25rem;
-    fill: var(--base-content);
-}
-
-.article-header a:hover {
-    border: 1px solid var(--primary);
-    background-color: color-mix(in srgb, var(--primary) 10%, transparent 100%);
-    color: var(--primary-content);
-}
-
-.article-header a:hover svg {
-    fill: var(--primary-content);
-}
-
-.article-main {
-    display: flex;
-    flex-direction: column;
-    gap: 4rem;
 }
 
 section {
@@ -117,21 +112,13 @@ code {
         display: block;
     }
 
-    .article-wrapper {
-        margin-top: 8rem;
-    }
-
     .external-link {
         display: none;
-    }
-
-    article {
-        gap: 4rem;
     }
 }
 
 @media screen and (max-width: 37.5rem) {
-    .article-wrapper {
+    .legal-notice-wrapper-inner {
         padding: 1rem;
         padding-bottom: 4rem;
     }
